Реализовано удаление проекта, добавлен заглоловок Действия и мелкие ошибки и руководства
